--- a/components/Film/Reviews/Reviews.module.sass
+++ b/components/Film/Reviews/Reviews.module.sass
@@ -1,5 +1,4 @@
 @use '@constants' as *
-  
+
 .reviews
-  & > *:not(:last-child)
-    margin-bottom: $padding_xl
+  @include spacing(margin-bottom, $padding_xl)
