--- a/components/Questions/Question/Question.module.sass
+++ b/components/Questions/Question/Question.module.sass
@@ -19,9 +19,7 @@
 .answer
   padding-right: calc($padding_xl + 28px)
   padding-top: $padding_l
-  font-weight: 400
-  font-size: 16px
-  line-height: 24px
+  @include fontDefault
 
 .arrow
   transition: transform 0.2s
