--- a/components/Questions/Questions.module.sass
+++ b/components/Questions/Questions.module.sass
@@ -1,11 +1,10 @@
 @use '@constants' as *
-  
+
 .questions
   display: flex
   flex-direction: column
 
-  & > *:not(:last-child)
-    margin-bottom: $padding_l
+  @include spacing(margin-bottom, $padding_l)
 
 .header
   width: 100%
@@ -17,6 +16,4 @@
   margin-bottom: $padding_xl
 
   & > h1
-    font-size: 32px
-    font-weight: 600
-    line-height: 32px
+    @include fontHeader
