--- a/components/Search/Search.module.sass
+++ b/components/Search/Search.module.sass
@@ -15,8 +15,7 @@
 
   background-color: $white
 
-  & > *:not(:last-child)
-    margin-bottom: $padding_l
+  @include spacing(margin-bottom, $padding_l)
 
 .header
   font-size: 16px
