--- a/app/about/page.module.sass
+++ b/app/about/page.module.sass
@@ -1,20 +1,15 @@
 @use '@constants' as *
-  
+
 .info
   width: 100%
   background-color: $white
   border-radius: $radius
   padding: $padding_xl
 
-  & > *:not(:last-child)
-    margin-bottom: $padding_l
+  @include spacing(margin-bottom, $padding_l)
 
   & > p
-  font-size: 16px
-  font-weight: 400
-  line-height: 24px
+  @include fontDefault
 
 .header
-  font-size: 32px
-  font-weight: 600
-  line-height: 32px
+  @include fontHeader
