--- a/app/constants.sass
+++ b/app/constants.sass
@@ -11,8 +11,11 @@ $padding_xs: 8px
 
 $radius: 8px
 
+@mixin spacing($side, $value)
+  & > *:not(:last-child)
+    #{$side}: $value
 
-//colors
+// colors
 $white: #FFFFFF
 $orange: #FF5500
 $disabled: #FFA375
@@ -22,3 +25,34 @@ $hover: #AAA
 $border: #E1E3E6
 $grey: #333333
 $font: #1B1F23
+
+// fonts
+@mixin fontTitle
+  font-size: 20px
+  font-weight: 600
+  line-height: 20px
+
+@mixin fontItalic
+  font-size: 16px
+  font-weight: 400px
+  font-style: italic
+  line-height: 20px
+
+@mixin fontDefault
+  font-size: 16px
+  font-weight: 400
+  line-height: 24px
+
+@mixin fontHeader
+  font-size: 32px
+  font-weight: 600
+  line-height: 32px
+
+@mixin fontSmall
+  font-size: 14px
+  font-weight: 600
+  line-height: 20px
+
+// others
+@mixin whiteToOrange
+  filter: invert(49%) sepia(95%) saturate(4456%) hue-rotate(2deg) brightness(102%) contrast(109%)
