--- a/components/Cards/Card/Card.module.sass
+++ b/components/Cards/Card/Card.module.sass
@@ -23,4 +23,4 @@
 
   &:hover
     cursor: pointer
-    filter: invert(49%) sepia(95%) saturate(4456%) hue-rotate(2deg) brightness(102%) contrast(109%)
+    @include whiteToOrange
