--- a/components/Film/Film.module.sass
+++ b/components/Film/Film.module.sass
@@ -1,5 +1,5 @@
 @use '@constants' as *
-  
+
 .film
   display: flex
 
@@ -9,8 +9,7 @@
   background-color: $white
   border-radius: $radius
 
-  & > *:not(:last-child)
-    margin-right: $padding_xxl
+  @include spacing(margin-right, $padding_xxl)
 
 .poster
   border-radius: $radius
