--- a/components/Film/FilmDetails/FilmDetails.module.sass
+++ b/components/Film/FilmDetails/FilmDetails.module.sass
@@ -1,9 +1,7 @@
 @use '@constants' as *
 
 .title
-  font-size: 32px
-  font-weight: 600
-  line-height: 32px
+  @include fontHeader
 
   color: $font
 
@@ -24,8 +22,7 @@
     & > span
       font-weight: 600
 
-  & > *:not(:last-child)
-    margin-bottom: $padding_l
+  @include spacing(margin-bottom, $padding_l)
 
 .description
   & > h3
@@ -36,6 +33,4 @@
     margin-bottom: $padding_l
 
   & > p
-    font-size: 16px
-    font-weight: 400
-    line-height: 24px
+    @include fontDefault
